--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "fs": "0.0.1-security",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   }
 }
